<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_bmi"
    android:tag="bmi_tag"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:background="#00000000"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
         android:id="@+id/bmi_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/bmi_age"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
         android:id="@+id/bmi_age_input"
         android:layout_width="50dip"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:inputType="numberDecimal"
         android:maxLength="2" />
        
        
        
    <RadioGroup
	android:id="@+id/sex_group"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="100dip"
	android:layout_marginBottom="5dp"
	android:orientation="horizontal"
	android:checkedButton="@+id/btn_man"
	>
	<RadioButton 
		android:text="男" 
		android:id="@+id/btn_man" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
	<RadioButton 
		android:text="女" 
		android:id="@+id/btn_woman" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
	</RadioGroup>
	
            
     </LinearLayout>
     
    
     <LinearLayout
        android:orientation="horizontal"
        android:background="#00000000"
        android:layout_marginTop="3dip"
        android:layout_marginLeft="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
         android:id="@+id/bmi_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/bmi_height"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
         android:id="@+id/bmi_height_input"
         android:layout_width="90dip"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:inputType="numberDecimal"
         android:maxLength="5" />
        
     </LinearLayout>
     
      <LinearLayout
        android:orientation="horizontal"
        android:background="#00000000"
        android:layout_marginTop="3dip"
        android:layout_marginLeft="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
         android:id="@+id/bmi_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/bmi_weight"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
         android:id="@+id/bmi_weight_input"
         android:layout_width="90dip"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:inputType="numberDecimal"
         android:maxLength="5" />
        
     </LinearLayout>
     
      <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="15dip"
    android:layout_marginBottom="5dip"
    android:background="@android:color/darker_gray"/>
     
        <TextView
         android:id="@+id/bmi_bmi"
         android:layout_marginTop="7dip"
         android:layout_marginLeft="15dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bmi_bmi"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
      <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="15dip"
    android:layout_marginBottom="5dip"
    android:background="@android:color/darker_gray"/>
        
        <TextView
         android:id="@+id/bmi_situation"
         android:layout_marginTop="7dip"
         android:layout_marginLeft="15dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bmi_situation"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
      <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="15dip"
    android:layout_marginBottom="5dip"
    android:background="@android:color/darker_gray"/>
        
        
        <TextView
         android:id="@+id/bmi_range"
         android:layout_marginTop="7dip"
         android:layout_marginLeft="15dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bmi_range"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
        <TextView
         android:id="@+id/bmi_ideal_weight"
         android:layout_marginTop="7dip"
         android:layout_marginLeft="15dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bmi_ideal_weight"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
           <ImageButton
        android:id="@+id/bmi_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="85dip"
        android:background="@color/transparent_background"
        android:src="@drawable/btn_bmi" />
        
    

</LinearLayout>