<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loc_msg_frg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical" >
    
        <TextView
         android:id="@+id/leave_message_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="90dip"
         android:layout_marginTop="10dip"
         android:text="@string/leave_message_title"
         android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
         android:id="@+id/leave_message_title_remind"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="50dip"
         android:layout_marginTop="2dip"
         android:text="@string/remind"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
<LinearLayout 
    android:id="@+id/loc_msg_frg_first"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
           
         <ImageButton
      android:id="@+id/btn_north"
      android:contentDescription="@string/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/transparent_background"
      android:layout_marginLeft="47dp"
      android:layout_marginTop="5dp"
      android:onClick="onSelected"
      android:src="@drawable/btn_north" />
         
         <ImageButton
      android:id="@+id/btn_medium"
      android:contentDescription="@string/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/transparent_background"
      android:layout_marginTop="5dp"
      android:layout_marginLeft="1dp"
      android:onClick="onSelected"
      android:src="@drawable/btn_medium" />
</LinearLayout>

<LinearLayout 
    android:id="@+id/loc_msg_frg_second"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
           
         <ImageButton
      android:id="@+id/btn_south"
      android:contentDescription="@string/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/transparent_background"
      android:layout_marginLeft="47dp"
      android:layout_marginTop="1dp"
      android:onClick="onSelected"
      android:src="@drawable/btn_south" />
         
         <ImageButton
      android:id="@+id/btn_east"
      android:contentDescription="@string/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/transparent_background"
      android:layout_marginLeft="1dp"
      android:layout_marginTop="1dp"
      android:onClick="onSelected"
      android:src="@drawable/btn_east" />
</LinearLayout>

</LinearLayout>