<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_color">

    <RadioGroup
	android:id="@+id/loc_group"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="120dp"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:orientation="horizontal"
	android:checkedButton="@+id/btn_north"
	>
	<RadioButton 
		android:text="北" 
		android:id="@+id/btn_north" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
	<RadioButton 
		android:text="中" 
		android:id="@+id/btn_medium" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
	<RadioButton 
		android:text="南" 
		android:id="@+id/btn_south" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
	<RadioButton 
		android:text="東" 
		android:id="@+id/btn_east" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
	</RadioGroup>
    
    
    <!-- title Label -->
     <TextView
         android:id="@+id/message_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dip" 
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
         android:text="@string/message_title"
         android:textSize="22sp" />

     <!-- title input -->
     <EditText
         android:id="@+id/title_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginBottom="10dip" 
         android:singleLine="true"
         android:inputType="textNoSuggestions" />

     <!-- content label -->
     <TextView
         android:id="@+id/message_content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/message_content"
         android:paddingLeft="30dp"
         android:paddingTop="20dp"
         android:textSize="21sp"/>

     <!-- content input -->
     <EditText
         android:id="@+id/content_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginBottom="10dp"
         android:lines="5"
         android:inputType="textMultiLine"
         android:gravity="top"
         />
     

  
    <RelativeLayout
        android:id="@+id/BTN_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000" 
        android:layout_marginTop="20dp">
        
  <ImageButton
      android:id="@+id/btnConfirm"
      android:contentDescription="@string/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/transparent_background"
      android:layout_marginLeft="80dp"
      android:layout_marginBottom="5dp"
      android:onClick="onSubmit"
      android:src="@drawable/btn_confirm" />
  
 <ImageButton
      android:id="@+id/btnCancel"
      android:contentDescription="@string/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/transparent_background"
      android:layout_marginLeft="210dp"
      android:layout_marginBottom="5dp"
      android:onClick="onSubmit"
      android:src="@drawable/btn_cancel" />

    </RelativeLayout> 

</LinearLayout>
